Colaboratory를 통해 생성됨

--- a/Math.ipynb
+++ b/Math.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Math.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnpFbhYMuCvwWHxVGOkcA0",
+      "authorship_tag": "ABX9TyOhxNBT+Q3yAy2kG9fe2/Q/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -47,22 +47,22 @@
         "outputId": "0624836f-ddb5-4f0d-85aa-bb8e0f510165"
       },
       "source": [
-        "## Taylor series 재귀함수\n",
+        "## Taylor series by using Recussive function\n",
         "def taylor(x,n):\n",
         "  if n == 0:\n",
         "    return 1\n",
         "  else:\n",
         "    return taylor(x,n-1) + 1/np.math.factorial(n)* (x**n)\n",
         "\n",
-        "## 결과 확인 code\n",
+        "## result checking code\n",
         "\n",
-        "# twinx 를 이용해서 이중 y축 구현.\n",
+        "# twinx() : shared X-axis \n",
         "xi = np.linspace(-1.5,1.5,100)\n",
         "fig, ax1 = plt.subplots()\n",
         "ax1.set_title('$ y=e^x $ : taylor approxmination')\n",
         "ax2 = ax1.twinx()\n",
         "\n",
-        "# ax1 : 좌측 y축 함수값 표기\n",
+        "# ax1 : left Y-aixs , values of exponential and approximation\n",
         "ax1.plot(xi,np.exp(xi),'b-',label='$ y=e^x $', markersize=2)\n",
         "ax1.plot(xi,taylor(xi,3),'g-',label='3th taylor series', markersize=1.5)\n",
         "ax1.plot(xi,taylor(xi,5),'r-',label='5th taylor series', markersize=1.5)\n",
@@ -70,8 +70,7 @@
         "ax1.set_ylabel('value')\n",
         "ax1.legend()\n",
         "\n",
-        "# ax2 : 우측 y축 error rate 표기.\n",
-        "# error rate : (참값-근사값)/참값\n",
+        "# ax2 : right Y-axis,  error rate = (true value - approximation)/true value\n",
         "ax2.plot(xi,np.abs((np.exp(xi)-taylor(xi,3))/np.exp(xi)),'go',label='error rate(3th taylor)', markersize=1.5)\n",
         "ax2.plot(xi,np.abs((np.exp(xi)-taylor(xi,5))/np.exp(xi)),'ro',label='error rate(5th taylor)', markersize=1.5)\n",
         "ax2.set_yscale('log')\n",
@@ -79,7 +78,7 @@
         "ax2.legend()\n",
         "plt.show()\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -106,7 +105,7 @@
         "outputId": "346eb701-3e7e-4c8a-c0c0-129d221041cb"
       },
       "source": [
-        "## 재귀함수 이용한 factorial 계산\n",
+        "## factoriaㅣ by recurssive\n",
         "def my_factorial(n):\n",
         "  if n == 0:\n",
         "    return 1\n",
@@ -117,7 +116,7 @@
         "for i in range(10):\n",
         "  print('{}th factorial:'.format(i), my_factorial(i))\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +151,7 @@
         "for i in range(10):\n",
         "  print('{}th factorial:'.format(i), np.math.factorial(i))\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
